Day3bis/10-toleration-off.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: registry.gitlab.onlineterroir.com/omega/public-reg/nginx:latest
