Day3bis/24-pod-token-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
spec:
  serviceAccountName: sderoche
  containers:
  - name: test-sa
    image: alpine
    command:
    - sleep
    - "6000"
    volumeMounts:
    - mountPath: /var/run/secrets/kubesecrets
      name: sderoche-token
  volumes:
  - name: sderoche-token
    secret:
      secretName: XXX
