Day3bis/4-sts-parallel.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-sts
  annotations:
    kubernetes.io/change-cause: "bump Nginx 1.17"
spec:
  serviceName: nginx
  podManagementPolicy: Parallel
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  template:
    metadata:
      labels:
        app: nginx    
    spec:
      containers:
      - name: nginx
        image: nginx:1.17
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      storageClassName: manual
      accessModes: 
        - ReadWriteOnce
      resources:
        requests:
          storage: 100M
