Day3bis/6-affinity-pod-want.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-affinity
spec:
  affinity:
    podAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: friendly
              operator: In
              values:
              - high
          topologyKey: kubernetes.io/os
  containers:
  - name: with-pod-affinity
    image: k8s.gcr.io/pause:2.0
