Day3bis/17-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http: #by path
      paths:
        - path: /nginx1
          backend:
            serviceName: nginx-service
            servicePort: 80
  - host: bckd2.org #by host header
    http: 
      paths:
      - path: /
        backend:
          serviceName: nginx-service-2
          servicePort: 80
